use anyhow::{Result};
use deno_core::{JsRuntime, RuntimeOptions};
use lru::LruCache;
use parking_lot::Mutex;
use std::num::NonZeroUsize;
use std::rc::Rc;
use std::cell::RefCell;
use std::sync::Arc;
use std::time::{Duration, Instant};
use tracing::{info};

use crate::adapters::storage::SovereignJournal;
use crate::domain::tenant::{TenantMetadata, TenantTier};
use crate::domain::now_ms;
// Domain ê³„ì¸µì˜ ìˆœìˆ˜ ì •ì±…ì„ ê°€ì ¸ì˜´
use crate::domain::pool::PoolPolicy;
use crate::ops::{self, SovereignStats};

/// [Hexagonal Adapter] Sovereign Pool
/// ì™¸ë¶€ ì˜ì¡´ì„±(V8, Sled)ì„ ì‹¤ì§ˆì ìœ¼ë¡œ ì œì–´í•˜ëŠ” ì–´ëŒ‘í„° ë ˆì´ì–´
pub struct SovereignPool {
    pool: Mutex<LruCache<String, PooledRuntime>>,
    tenant_cache: Mutex<LruCache<String, TenantMetadata>>,
    journal: Arc<SovereignJournal>,
    config: PoolConfig,
}

#[derive(Debug, Clone)]
pub struct PoolConfig {
    pub max_pool_size: usize,
    pub max_idle_time: Duration,
    pub default_tier: TenantTier,
}

impl Default for PoolConfig {
    fn default() -> Self {
        Self {
            max_pool_size: 100,
            max_idle_time: Duration::from_secs(300),
            default_tier: TenantTier::Free,
        }
    }
}

/// V8 Isolateë¥¼ í¬í•¨í•˜ëŠ” ë¬¼ë¦¬ì  ì—”í‹°í‹°
pub struct PooledRuntime {
    runtime: JsRuntime,
    last_used: Instant,
    request_count: u64,
}

impl PooledRuntime {
    fn new(runtime: JsRuntime) -> Self {
        Self {
            runtime,
            last_used: Instant::now(),
            request_count: 0,
        }
    }
    
    fn touch(&mut self) {
        self.last_used = Instant::now();
        self.request_count += 1;
    }
}

impl SovereignPool {
    pub fn new(journal: Arc<SovereignJournal>, config: PoolConfig) -> Self {
        let pool_size = NonZeroUsize::new(config.max_pool_size).expect("Invalid pool size");
        let tenant_size = NonZeroUsize::new(1000).unwrap();
        
        info!("ğŸŠ Sovereign Pool (Hexagonal Adapter) initialized");
        
        Self {
            pool: Mutex::new(LruCache::new(pool_size)),
            tenant_cache: Mutex::new(LruCache::new(tenant_size)),
            journal,
            config,
        }
    }

    /// [Command] Isolate í™•ë³´
    pub fn acquire(&self, tenant_id: &str) -> Result<RuntimeGuard<'_>> {
        let tenant = self.get_tenant_metadata(tenant_id)?;
        tenant.validate()?; // Domain ë¡œì§ í˜¸ì¶œ
        
        let mut pool = self.pool.lock();
        
        let pooled = match pool.pop(tenant_id) {
            Some(mut cached) => {
                info!("â™»ï¸ Reusing warm isolate: {}", tenant_id);
                cached.touch();
                cached
            }
            None => {
                info!("ğŸ†• Creating new isolate: {}", tenant_id);
                PooledRuntime::new(self.create_runtime(&tenant)?)
            }
        };
        
        Ok(RuntimeGuard {
            runtime: Some(pooled),
            tenant_id: tenant_id.to_string(),
            pool_ref: self,
        })
    }

    /// [Internal] V8 Runtime ë¬¼ë¦¬ì  ìƒì„±
    fn create_runtime(&self, tenant: &TenantMetadata) -> Result<JsRuntime> {
        // 1. Context ì¤€ë¹„ (Spec-002)
        let ctx_data = crate::proto::KrepisContext {
            request_id: uuid::Uuid::new_v4().to_string(),
            tenant_id: tenant.tenant_id.clone(),
            // Domainì˜ ResourceConfigë¥¼ ì°¸ê³ í•˜ì—¬ ìš°ì„ ìˆœìœ„ ê²°ì • ê°€ëŠ¥
            priority: 1, 
            timestamp: now_ms(),
            ..Default::default()
        };
        
        let ctx_buffer = Rc::new(prost::Message::encode_to_vec(&ctx_data));
        let stats = Rc::new(RefCell::new(SovereignStats::default()));
        
        // 2. Extension ì´ˆê¸°í™” (v0.316 ë§¤í¬ë¡œ ë°©ì‹ ì¤€ìˆ˜)
        let mut ext = ops::krepis_sovereign::init_ops();
        let journal = self.journal.clone();
        let tenant_meta = tenant.clone();

        ext.op_state_fn = Some(Box::new(move |state| {
            state.put(ctx_buffer.clone());
            state.put(stats.clone());
            state.put(journal.clone());
            state.put(tenant_meta.clone());
        }));
        
        // 3. Runtime ìƒì„±
        let runtime = JsRuntime::new(RuntimeOptions {
            extensions: vec![ext],
            ..Default::default()
        });
        
        Ok(runtime)
    }

    /// [Command] ìœ íœ´ ìì› ì •ë¦¬ - Domain Policyì— ì˜ì¡´
    pub fn cleanup_idle(&self) {
        let mut pool = self.pool.lock();
        let max_idle = self.config.max_idle_time;
        let mut to_remove = Vec::new();

        // 1. ì œê±°í•  ëŒ€ìƒì˜ IDë§Œ ë¨¼ì € ìˆ˜ì§‘ (Immutable borrow)
        for (tid, pooled) in pool.iter() {
            if PoolPolicy::should_evict(pooled.last_used, max_idle) {
                to_remove.push(tid.clone());
            }
        }

        // 2. ìˆ˜ì§‘ëœ IDë“¤ì„ ì œê±° (Mutable borrow)
        for tid in to_remove {
            pool.pop(&tid);
            info!("ğŸ—‘ï¸  Evicted: {}", tid);
        }
    }

    pub fn release(&self, tenant_id: String, pooled: PooledRuntime) {
        if tenant_id.is_empty() { return; }
        
        let mut pool = self.pool.lock();
        pool.put(tenant_id, pooled);
    }

    /// [Query] í˜„ì¬ í’€ ìƒíƒœ ìŠ¤ëƒ…ìƒ·
    pub fn stats(&self) -> crate::domain::pool::PoolSnapshot {
        let pool = self.pool.lock();
        crate::domain::pool::PoolSnapshot {
            cached_isolates: pool.len(),
            max_capacity: self.config.max_pool_size,
            healthy: true,
        }
    }

    fn get_tenant_metadata(&self, tenant_id: &str) -> Result<TenantMetadata> {
        let mut cache = self.tenant_cache.lock();
        if let Some(meta) = cache.get(tenant_id) {
            return Ok(meta.clone());
        }
        let meta = TenantMetadata::new(tenant_id.to_string(), self.config.default_tier);
        cache.put(tenant_id.to_string(), meta.clone());
        Ok(meta)
    }

    /// [Helper] íŠ¹ì • í…Œë„ŒíŠ¸ì˜ ëŸ°íƒ€ì„ì„ íšë“í•˜ì—¬ í´ë¡œì €ë¥¼ ì‹¤í–‰í•˜ê³  ìë™ ë°˜í™˜í•©ë‹ˆë‹¤.
    pub async fn execute_isolated<F, R>(&self, tenant_id: &str, f: F) -> Result<R>
    where
        F: FnOnce(&mut deno_core::JsRuntime) -> Result<R>,
    {
        let mut guard = self.acquire(tenant_id)?;
        let result = f(guard.runtime_mut());

        // ğŸ’¡ ì¶”ê°€: ê²°ê³¼ê°€ ì—ëŸ¬ì¼ ê²½ìš° ì €ë„ì— ìë™ìœ¼ë¡œ ê¸°ë¡
        if let Err(ref e) = result {
            let _ = self.journal.log_transaction(&crate::domain::journal::TransactionLog {
                timestamp: crate::domain::now_ms(),
                op_name: format!("{}:panic_caught", tenant_id),
                request_id: "internal-fault-handler".to_string(),
                status: crate::domain::journal::LogStatus::Failed,
            });
            tracing::error!("ğŸ›¡ï¸ Internal Fault Handled for {}: {}", tenant_id, e);
        }

        result
    }

    /// [System] í…ŒìŠ¤íŠ¸ ì¢…ë£Œ ì‹œ V8 ìŠ¤íƒ ìˆœì„œ(LIFO)ë¥¼ ì§€í‚¤ë©° ìì›ì„ í•´ì œí•˜ê¸° ìœ„í•œ ë©”ì„œë“œ
    pub fn shutdown(&self) {
        let mut pool = self.pool.lock();
        let mut items = Vec::new();

        // 1. ìºì‹œì— ìˆëŠ” ëª¨ë“  ëŸ°íƒ€ì„ì„ êº¼ëƒ…ë‹ˆë‹¤.
        // pop_lru()ëŠ” ê°€ì¥ ì˜¤ë˜ëœ(Least Recently Used) ê²ƒë¶€í„° ë‚˜ì˜µë‹ˆë‹¤.
        // ì˜ˆ: [A, B] ìˆœì„œë¡œ ë‚˜ì˜´
        while let Some((_id, runtime)) = pool.pop_lru() {
            items.push(runtime);
        }

        // 2. í˜„ì¬ itemsëŠ” [Oldest, ..., Newest] ìˆœì„œì…ë‹ˆë‹¤.
        // V8 ìŠ¤íƒì€ Newestê°€ Topì— ìˆìœ¼ë¯€ë¡œ, Newestë¶€í„° ë“œë¡­í•´ì•¼ í•©ë‹ˆë‹¤.
        // ë°°ì—´ì„ ë’¤ì§‘ìŠµë‹ˆë‹¤. -> [Newest, ..., Oldest]
        items.reverse();

        // 3. items ë²¡í„°ê°€ ìŠ¤ì½”í”„ë¥¼ ë²—ì–´ë‚˜ë©´ì„œ 0ë²ˆ ì¸ë±ìŠ¤(Newest)ë¶€í„° ì°¨ë¡€ë¡œ ë“œë¡­ë©ë‹ˆë‹¤.
        // V8: "í¸-ì•ˆ"
        info!("ğŸ›‘ Sovereign Pool shutdown: {} isolates dropped safely.", items.len());
    }
}

/// [RAII Guard] ëŸ°íƒ€ì„ ìˆ˜ëª… ê´€ë¦¬
pub struct RuntimeGuard<'a> {
    runtime: Option<PooledRuntime>,
    tenant_id: String,
    pool_ref: &'a SovereignPool,
}

impl<'a> RuntimeGuard<'a> {
    pub fn runtime_mut(&mut self) -> &mut JsRuntime {
        &mut self.runtime.as_mut().unwrap().runtime
    }
    pub fn leak(&mut self) { self.runtime.take(); }
}

impl<'a> Drop for RuntimeGuard<'a> {
    fn drop(&mut self) {
        if let Some(mut pooled) = self.runtime.take() {
            // ğŸ’¡ í˜„ì¬ ì‹œì ì˜ ì‹œê°„ì„ ì—…ë°ì´íŠ¸í•˜ì—¬ ë°˜í™˜
            pooled.last_used = std::time::Instant::now();
            
            // tenant_id ì†Œìœ ê¶Œì„ ì™„ì „íˆ ì´ì „í•˜ë©° release í˜¸ì¶œ
            let tid = std::mem::take(&mut self.tenant_id);
            self.pool_ref.release(tid, pooled);
        }
    }
}