use deno_core::{JsRuntime, RuntimeOptions, PollEventLoopOptions};
use std::rc::Rc;
use std::cell::RefCell;
use std::sync::Arc;
use prost::Message;

// Trinity ê³„ì¸µì—ì„œ í•„ìš”í•œ ìš”ì†Œë“¤
use krepis_kernel::proto::KrepisContext;
use krepis_kernel::domain::journal::{TransactionLog, LogStatus};
use krepis_kernel::adapters::storage::SovereignJournal;
use krepis_kernel::runtime_ops::{self, SovereignStats};

deno_core::extension!(
    krepis_test,
    ops = [
        runtime_ops::bridge::op_get_context,
        runtime_ops::bridge::op_check_permission,
        runtime_ops::bridge::op_increment_stats,
    ],
);

#[tokio::test]
async fn test_sovereign_runtime_creation() {
    let ctx = KrepisContext {
        request_id: "test-001".to_string(),
        tenant_id: "test-tenant".to_string(),
        priority: 5,
        is_turbo_mode: false,
        trace_id: "trace-001".to_string(),
        timestamp: 1234567890,
        metadata: Default::default(),
    };

    let ctx_buffer = Rc::new(ctx.encode_to_vec());
    
    let mut ext = krepis_test::init_ops();
    ext.op_state_fn = Some(Box::new(move |state| {
        state.put(ctx_buffer.clone());
    }));

    let mut runtime = JsRuntime::new(RuntimeOptions {
        extensions: vec![ext],
        ..Default::default()
    });

    let result = runtime.execute_script(
        "test",
        r#"
            const buffer = Deno.core.ops.op_get_context();
            buffer.length > 0;
        "#.to_string(),
    );

    assert!(result.is_ok());
}

#[tokio::test]
async fn test_permission_system() {
    use krepis_kernel::domain::tenant::{TenantMetadata, TenantTier};
    use tempfile::TempDir;
    
    let ctx_buffer: Rc<Vec<u8>> = Rc::new(vec![]);
    let temp_dir = TempDir::new().unwrap();
    let journal = Arc::new(SovereignJournal::new(temp_dir.path()).unwrap());
    let tenant_meta = TenantMetadata::new("test-tenant".to_string(), TenantTier::Standard);

    let mut ext = krepis_test::init_ops();
    ext.op_state_fn = Some(Box::new(move |state| {
        state.put(ctx_buffer.clone());
        state.put(journal.clone());
        state.put(tenant_meta.clone());
    }));

    let mut runtime = JsRuntime::new(RuntimeOptions {
        extensions: vec![ext],
        ..Default::default()
    });

    let result = runtime.execute_script(
        "permission_test",
        r#"
            const allowed = Deno.core.ops.op_check_permission("read", "/tmp/krepis/test");
            const denied = Deno.core.ops.op_check_permission("write", "/etc/passwd");
            
            allowed === true && denied === false;
        "#.to_string(),
    );

    assert!(result.is_ok());
}

#[test]
fn test_protobuf_context_creation() {
    let ctx = KrepisContext {
        request_id: "proto-test".to_string(),
        tenant_id: "tenant-proto".to_string(),
        priority: 10,
        is_turbo_mode: true,
        trace_id: "trace-proto".to_string(),
        timestamp: 1234567890,
        metadata: Default::default(),
    };

    let encoded = ctx.encode_to_vec();
    let decoded = KrepisContext::decode(&encoded[..]).unwrap();

    assert_eq!(decoded.request_id, "proto-test");
    assert_eq!(decoded.is_turbo_mode, true);
    assert_eq!(decoded.priority, 10);
}

/// ğŸ’¡ C-001 Fix: í…Œë„ŒíŠ¸ ê²©ë¦¬ ì €ë„ í…ŒìŠ¤íŠ¸
#[test]
fn test_journal_persistence_with_tenant_isolation() {
    use tempfile::TempDir;
    
    let temp_dir = TempDir::new().unwrap();
    let journal_path = temp_dir.path();
    
    // â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”
    // First session: í…Œë„ŒíŠ¸ë³„ ê²©ë¦¬ëœ ë°ì´í„° ìƒì„±
    // â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”
    {
        let journal = SovereignJournal::new(journal_path).unwrap();
        
        // ğŸ’¡ C-001 Fix: tenant_idë¥¼ ì²« ë²ˆì§¸ ì¸ìë¡œ ì „ë‹¬
        let count1 = journal.increment_op_count("tenant-alpha", "test_op").unwrap();
        assert_eq!(count1, 1);
        
        let count2 = journal.increment_op_count("tenant-alpha", "test_op").unwrap();
        assert_eq!(count2, 2);
        
        // ë‹¤ë¥¸ í…Œë„ŒíŠ¸ë„ ë™ì¼í•œ op_nameì„ ê°€ì§ˆ ìˆ˜ ìˆì§€ë§Œ ê²©ë¦¬ë¨
        let count_beta = journal.increment_op_count("tenant-beta", "test_op").unwrap();
        assert_eq!(count_beta, 1, "tenant-beta should have isolated counter");
        
        // ğŸ’¡ C-001 Fix: tenant_idë¥¼ ì²« ë²ˆì§¸ ì¸ìë¡œ ì „ë‹¬
        journal.log_transaction("tenant-alpha", &TransactionLog {
            timestamp: 1234567890,
            op_name: "test_op".to_string(),
            request_id: "req-001".to_string(),
            status: LogStatus::Completed,
        }).unwrap();
    }
    
    // â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”
    // Second session: ë””ìŠ¤í¬ì—ì„œ ë³µêµ¬ ë° ê²©ë¦¬ ê²€ì¦
    // â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”
    {
        let journal = SovereignJournal::new(journal_path).unwrap();
        
        // ğŸ’¡ í…Œë„ŒíŠ¸ë³„ ê²©ë¦¬ ê²€ì¦
        let recovered_alpha = journal.recover_op_count("tenant-alpha", "test_op").unwrap();
        assert_eq!(recovered_alpha, 2, "tenant-alpha op count should persist");
        
        let recovered_beta = journal.recover_op_count("tenant-beta", "test_op").unwrap();
        assert_eq!(recovered_beta, 1, "tenant-beta op count should be isolated");
        
        // ì¡´ì¬í•˜ì§€ ì•ŠëŠ” í…Œë„ŒíŠ¸ëŠ” 0
        let recovered_gamma = journal.recover_op_count("tenant-gamma", "test_op").unwrap();
        assert_eq!(recovered_gamma, 0, "non-existent tenant should return 0");
        
        // ğŸ’¡ C-001 Fix: journal_countë„ tenant_id í•„ìš”
        assert_eq!(journal.journal_count("tenant-alpha").unwrap(), 1, "Transaction log should persist");
        assert_eq!(journal.journal_count("tenant-beta").unwrap(), 0, "tenant-beta has no logs");
    }
}

/// ğŸ’¡ C-001 Fix: í¬ë¡œìŠ¤-í…Œë„ŒíŠ¸ ê²©ë¦¬ ê²€ì¦ í…ŒìŠ¤íŠ¸
#[test]
fn test_cross_tenant_isolation() {
    use tempfile::TempDir;
    
    let temp_dir = TempDir::new().unwrap();
    let journal = SovereignJournal::new(temp_dir.path()).unwrap();
    
    // Tenant A: ë¯¼ê°í•œ ë°ì´í„° ì €ì¥
    journal.log_transaction("tenant-a", &TransactionLog {
        timestamp: 1000,
        op_name: "sensitive_operation".to_string(),
        request_id: "secret-req-123".to_string(),
        status: LogStatus::Completed,
    }).unwrap();
    
    // Tenant B: ìì‹ ì˜ ë°ì´í„°ë§Œ ì ‘ê·¼ ê°€ëŠ¥
    let logs_b = journal.get_recent_logs("tenant-b", 100).unwrap();
    assert_eq!(logs_b.len(), 0, "Tenant B should not see Tenant A's logs");
    
    // Tenant A: ìì‹ ì˜ ë°ì´í„° ì ‘ê·¼ ê°€ëŠ¥
    let logs_a = journal.get_recent_logs("tenant-a", 100).unwrap();
    assert_eq!(logs_a.len(), 1, "Tenant A should see own logs");
    assert_eq!(logs_a[0].request_id, "secret-req-123");
}

#[tokio::test]
async fn test_kernel_restart_recovery_with_tenant_isolation() {
    use tempfile::TempDir;
    use krepis_kernel::domain::tenant::{TenantMetadata, TenantTier};
    
    let temp_dir = TempDir::new().unwrap();
    let journal_path = temp_dir.path();
    const TEST_TENANT: &str = "recovery-test-tenant";
    
    // â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”
    // First kernel session
    // â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”
    let initial_count = {
        let journal = Arc::new(SovereignJournal::new(journal_path).unwrap());
        let stats = Rc::new(RefCell::new(SovereignStats::default()));
        let stats_for_check = stats.clone();
        let tenant_meta = TenantMetadata::new(TEST_TENANT.to_string(), TenantTier::Standard);

        let mut ext = krepis_test::init_ops();
        ext.op_state_fn = Some(Box::new(move |state| {
            state.put(stats.clone());
            state.put(journal.clone());
            state.put(tenant_meta.clone());
        }));

        let mut runtime = JsRuntime::new(RuntimeOptions {
            extensions: vec![ext],
            ..Default::default()
        });

        runtime.execute_script(
            "increment_test",
            "for (let i = 0; i < 5; i++) { Deno.core.ops.op_increment_stats(); }".to_string(),
        ).unwrap();
        
        runtime.run_event_loop(PollEventLoopOptions {
            wait_for_inspector: false,
            pump_v8_message_loop: true,
        }).await.unwrap();
        
        let count = stats_for_check.borrow().js_ops_called;
        count
    };
    
    assert_eq!(initial_count, 5);
    
    // â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”
    // Second kernel session (simulated restart)
    // â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”
    let recovered_count = {
        let journal = Arc::new(SovereignJournal::new(journal_path).unwrap());
        
        // ğŸ’¡ C-001 Fix: tenant_id ì „ë‹¬í•˜ì—¬ ê²©ë¦¬ëœ ë°ì´í„° ë³µêµ¬
        let recovered = journal.recover_op_count(TEST_TENANT, "js_ops_called").unwrap();
        
        let stats = Rc::new(RefCell::new(SovereignStats {
            js_ops_called: recovered,
            contexts_created: 0,
        }));
        let stats_for_check = stats.clone();
        let tenant_meta = TenantMetadata::new(TEST_TENANT.to_string(), TenantTier::Standard);

        let mut ext = krepis_test::init_ops();
        ext.op_state_fn = Some(Box::new(move |state| {
            state.put(stats.clone());
            state.put(journal.clone());
            state.put(tenant_meta.clone());
        }));

        let mut runtime = JsRuntime::new(RuntimeOptions {
            extensions: vec![ext],
            ..Default::default()
        });

        runtime.execute_script(
            "recovery_test",
            "for (let i = 0; i < 3; i++) { Deno.core.ops.op_increment_stats(); }".to_string(),
        ).unwrap();
        
        runtime.run_event_loop(PollEventLoopOptions {
            wait_for_inspector: false,
            pump_v8_message_loop: true,
        }).await.unwrap();
        
        let count = stats_for_check.borrow().js_ops_called;
        count
    };
    
    // 5 (recovered) + 3 (new) = 8
    assert_eq!(recovered_count, 8);
}